<resources>
    <string name="app_name">MapGeneral</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MapYouTubeAPI_TestApp</string>
    <string name="googlemap_id">AIzaSyCe-AZD2SdN9hs-pefNc3zu0ZFyxBOMhhU</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address:</string>
    <string name="hours">Working Hours:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="viewmenu">View Menu</string>
    <string name="NA">Not Available</string>
    <string name="menu">Menu</string>
    <string name="addcart">Add to Cart</string>
    <string name="changepic">Change Profile Picture</string>
    <string name="mycart">My Cart</string>
    <string name="rest_list">Restaurant List</string>
    <string name="nocart">No items in your Cart!</string>
    <string name="clearcart">Clear Cart</string>
    <string name="me">Ravichandr Malapati</string>
    <string name="suid">3157063437</string>
    <string name="aboutme">About Me</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="google_maps_key">AIzaSyCe-AZD2SdN9hs-pefNc3zu0ZFyxBOMhhU</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="aboutus">About Us</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>

    <string name="hello">Hello World, PhotoIntentActivity!</string>

    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>

    <string name="facebook_app_id">925012130958831</string>
    <string name="firebase_url">https://zolhi-90cea.firebaseio.com/</string>
<string name="zomato_api_key">36bc5af72519a7ef2d2062e2b25af4a1</string>
    <string name="eat_street_api_key">5d26f33f30a7418c</string>
    <string name="server_client_id">122887549719-8varj2na6s6ncj92oa386fekio0rikvm.apps.googleusercontent.com</string>
</resources>
