<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MenuPagerActivity">
    <item
        android:id="@+id/add_cart"
        android:title="@string/addcart"
        android:orderInCategory="100"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/aboutus"
        android:orderInCategory="100"
        android:title="@string/aboutus"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>