<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context=".RestaurantDetails"
        android:id = "@+id/container_rest_detail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/restaurant_bg">
        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            android:fitsSystemWindows="true"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right|end"
            android:clickable="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_name"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:layout_below="@id/restaurant_name"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minprice"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:layout_below="@id/delivery"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waitingtime"
            android:layout_below="@id/minprice"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/isopen"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/waitingtime"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_text"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:id="@+id/googlemaps"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@id/details"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rest_details"
        android:layout_below="@id/googlemaps"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/activity_small_margin"
        android:background="@drawable/address_bg">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:id="@+id/address_details">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_image"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_marginLeft="@dimen/activity_small_margin"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_addr"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:text="@string/address"
            android:layout_toRightOf="@id/address_image"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_video_library_black_24dp"
            android:layout_alignBottom="@+id/address"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/address_image"
            android:id="@+id/youtube_video"
            android:backgroundTint="#99fa0404"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:textSize="12dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/address_image"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:layout_below="@id/restaurant_addr"/>
            </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hours"
            android:text="@string/hours"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:textStyle="bold"
            android:layout_below="@id/address_details"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mondayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/monday"
            android:layout_below="@id/hours"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/mondayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/tuesday"
            android:layout_below="@id/mondayKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/tuesdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wednesdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/wednesday"
            android:layout_below="@id/tuesdayKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wednesday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/wednesdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thursdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/thursday"
            android:layout_below="@id/wednesdayKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thursday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/thursdayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fridayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/friday"
            android:layout_below="@id/thursdayKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/fridayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/satKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/saturday"
            android:layout_below="@id/fridayKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saturday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/satKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sundayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/sunday"
            android:layout_below="@id/satKey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sunday"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/sundayKey"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"/>

        </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_button"
        android:layout_below="@id/rest_details"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/activity_small_margin"
        android:background="@drawable/address_bg">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/menu_text">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_image"
                android:layout_marginRight="@dimen/activity_small_margin"
                android:layout_centerVertical="true"
                android:src="@drawable/dining_18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_menu"
                android:text="@string/viewmenu"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/menu_image"/>

            </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_arrow"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>




</android.support.v4.widget.NestedScrollView>